[gd_scene load_steps=3 format=3 uid="uid://cqqt7vm8oqa0p"]

[ext_resource type="Script" path="res://scenes/gui/hud.gd" id="1_k16lx"]
[ext_resource type="Theme" uid="uid://cqb5v4ysfrkvj" path="res://scenes/gui/main_theme.tres" id="1_ufebr"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_k16lx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ufebr")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "SCORE: 000"
autowrap_mode = 2

[node name="RestartVbox" type="VBoxContainer" parent="Control/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="HighScoreLabel" type="Label" parent="Control/MarginContainer/RestartVbox"]
layout_mode = 2
size_flags_vertical = 0
text = "HIGHSCORE: 000000"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextLabel" type="Label" parent="Control/MarginContainer/RestartVbox"]
layout_mode = 2
size_flags_vertical = 0
text = "click to play again"
horizontal_alignment = 1
autowrap_mode = 2
